fixed spacing on header

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -269,3 +269,7 @@ header {
 .open-modal {
   background-color: white;
 }
+
+textPath {
+  font-size: xx-large;
+}
